eicb-p1/src/test/testcases/errors/p1_public/task_6/return_err_1.syn.mavl
function void main() {
	return a }
}
